@@ -1,0 +1,6 @@
+#include <stdio.h>
+
+void otherFunc(const char* msg)
+{
+   printf("%s\n", msg);
+}
